--- a/gersis-angular/src/app/entidade-list/entidade-list.component.html
+++ b/gersis-angular/src/app/entidade-list/entidade-list.component.html
@@ -3,7 +3,7 @@
       <span>Entidades</span>
       <button class="btn btn-primary btn-sm dgc-botao-comando dgc-direita" (click)="edita()">Nova</button>
   </div>
-  <div *ngIf="listaBase">
+  <div *ngIf="listaBase" class="dgc-painel-principal">
       <div class="dgc-card" *ngFor="let item of listaBase">
           <div class="dgc-card-header">
               <span class="dgc-link" routerLink="/entidadeDetalhe/{{item.id}}">{{item.nome}}</span>
