--- a/gersis-angular/src/app/processo-java-list/processo-java-list.component.html
+++ b/gersis-angular/src/app/processo-java-list/processo-java-list.component.html
@@ -1,3 +1,23 @@
-<p>
-  processo-java-list works!
-</p>
+<div class="dgc-painel">
+  <div class="dgc-painel-header">
+      <span>Processos Java</span>
+      <button class="btn btn-primary btn-sm dgc-botao-comando dgc-direita" (click)="edita()">Nova</button>
+  </div>
+  <div *ngIf="listaBase" class="dgc-painel-principal">
+      <div class="dgc-card" *ngFor="let item of listaBase">
+          <div class="dgc-card-header">
+              <span class="dgc-link" routerLink="/processoJavaDetalhe/{{item.id}}">{{item.nomeClasseMain}}</span>
+          </div>
+          <div class="dgc-card-detalhe">
+            <span>{{item.jar}}</span>
+          </div>
+          <div class="dgc-card-detalhe" *ngIf="item.linuxInternet">
+            <span>{{item.linuxInternet.nome}}</span>
+          </div>
+          <div class="dgc-card-comandos">
+            <button class="btn-primary btn-sm btn" (click)="edita(item)">Editar</button>
+          </div> 
+      </div>
+     
+  </div>
+</div>
