--- a/gersis-angular/src/app/sidebar/sidebar.component.html
+++ b/gersis-angular/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,7 @@
 <div class="sidebar-wrapper">
   <div class="logo">
     <a routerLink="/home" class="simple-text">
-      <div class="logo-img">
-        <img src="assets/img/angular2-logo-white.png" />
-      </div>
-      <span routerLink="/home">Marketing Digital</span>
+      <span routerLink="/home">Gerenciador Sistemas</span>
     </a>
   </div>
 
