--- a/gersis-angular/src/styles.css
+++ b/gersis-angular/src/styles.css
@@ -122,7 +122,7 @@ body {
     line-height: 1.2;
    letter-spacing: 1px;
    color: #000000;
-   text-transform: uppercase;
+   /*text-transform: uppercase;*/
    font-size: 160%;
    font-weight: 700;
    margin-right: 8px;
@@ -298,6 +298,9 @@ body {
 .example-full-width {
  width: 100%;
 }
+.example-half-width {
+  width: 50%;
+ }
 
 
   
