--- a/gersis-angular/src/styles.css
+++ b/gersis-angular/src/styles.css
@@ -167,6 +167,7 @@ body {
  .dgc-card-detalhe {
   margin-top: 12px;
   margin-bottom: 12px;
+  display: flex; 
  }
  .dgc-card-detalhe table {
   width: 100%;
