--- a/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
+++ b/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
@@ -14,7 +14,8 @@
 
     <mat-form-field class="example-full-width" >
       <mat-select placeholder="Tipo"  #tipo [(ngModel)]="item.tipo" name="tipo">
-        <mat-option value="number">number</mat-option>
+        <mat-option value="number-int">number-int</mat-option>
+        <mat-option value="number-double">number-double</mat-option>
         <mat-option value="string">string</mat-option>
         <mat-option value="date">date</mat-option>
         <mat-option value="object">object</mat-option>
