--- a/gersis-angular/src/app/entidade-detalhe/entidade-detalhe.component.html
+++ b/gersis-angular/src/app/entidade-detalhe/entidade-detalhe.component.html
@@ -45,7 +45,7 @@
     <div *ngFor="let item of principal.metodoServers">
       <div class="dgc-card-detalhe" >
         <span>{{item.nome}}&nbsp;&nbsp;</span>
-        <span>({{item.tipoMetodo}})</span>
+        <span>({{item.tipoMetodo}}) : {{item.tipoResposta}}</span>
         <div class="dgc-direita">
           <button class="btn-primary btn-sm btn" (click)="editaParametroMetodoServer(item)">Insere Parâmetro</button>
           <button class="btn-primary btn-sm btn" (click)="editaMetodo(item)">Altera</button>
