--- a/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
+++ b/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
@@ -12,30 +12,50 @@
     <span>Cron: {{principal.crontab}}</span>
   </div>
 
-  <div class="dgc-card">
-    <div class="dgc-card-header">
-      <span>Saídas</span>
-    </div>
-    <div class="dgc-card-detalhe" *ngFor="let rel of principal.processoEntidadeSaida">
-      <span>{{rel.entidade.nome}}</span>
-    </div>
-    <div class="dgc-card-comandos">
-      <button class="btn-primary btn-sm btn" (click)="editaEntidadeSaida(principal)">Novo</button>
-    </div> 
-  </div>
+  <div class="dgc-painel-principal">
 
-  <div class="dgc-card">
-    <div class="dgc-card-header">
-      <span>Entradas</span>
+    <div class="dgc-card dgc-card-half">
+      <div class="dgc-card-header">
+        <span>Saídas</span>
+      </div>
+      <div class="dgc-card-detalhe" *ngFor="let rel of principal.processoEntidadeSaida">
+        <span>{{rel.entidade.nome}}</span>
+      </div>
+      <div class="dgc-card-comandos">
+        <button class="btn-primary btn-sm btn" (click)="editaEntidadeSaida(principal)">Novo</button>
+      </div> 
     </div>
-    <div class="dgc-card-detalhe" *ngFor="let rel of principal.processoEntidadeEntrada">
-      <span>{{rel.entidade.nome}}</span>
+  
+    <div class="dgc-card dgc-card-half">
+      <div class="dgc-card-header">
+        <span>Entradas</span>
+      </div>
+      <div class="dgc-card-detalhe" *ngFor="let rel of principal.processoEntidadeEntrada">
+        <span>{{rel.entidade.nome}}</span>
+      </div>
+      <div class="dgc-card-comandos">
+        <button class="btn-primary btn-sm btn" (click)="editaEntidadeEntrada(principal)">Novo</button>
+      </div> 
     </div>
-    <div class="dgc-card-comandos">
-      <button class="btn-primary btn-sm btn" (click)="editaEntidadeEntrada(principal)">Novo</button>
-    </div> 
+  
+    <div class="dgc-card  dgc-card-full">
+      <div class="dgc-card-header">
+        <span>Dataset</span>
+      </div>
+      <div class="dgc-card-detalhe" *ngFor="let dado of principal.dadoProcessos">
+        <span>{{dado.nome}}</span>
+        <span *ngIf="dado.tipoEntidade">: <span *ngIf="dado.tipoEntidadeLista==1">*</span>{{dado.tipoEntidade.nome}}</span>
+        <span *ngIf="dado.tipoSimples"> : {{dado.tipoSimples}}</span>
+        <div class="dgc-direita">
+          <button class="btn-primary btn-sm btn" (click)="editaDadoProcesso(principal,dado)">Altera</button>
+        </div>
+      </div>
+      <div class="dgc-card-comandos">
+        <button class="btn-primary btn-sm btn" (click)="editaDadoProcesso(principal)">Novo</button>
+      </div> 
+    </div>
+  
   </div>
-
 
 
   <div class="dgc-card">
@@ -70,22 +90,7 @@
     </div> 
   </div>
 
-  <div class="dgc-card">
-    <div class="dgc-card-header">
-      <span>Dataset</span>
-    </div>
-    <div class="dgc-card-detalhe" *ngFor="let dado of principal.dadoProcessos">
-      <span>{{dado.nome}}</span>
-      <span *ngIf="dado.tipoEntidade">: <span *ngIf="dado.tipoEntidadeLista==1">*</span>{{dado.tipoEntidade.nome}}</span>
-      <span *ngIf="dado.tipoSimples"> : {{dado.tipoSimples}}</span>
-      <div class="dgc-direita">
-        <button class="btn-primary btn-sm btn" (click)="editaDadoProcesso(principal,dado)">Altera</button>
-      </div>
-    </div>
-    <div class="dgc-card-comandos">
-      <button class="btn-primary btn-sm btn" (click)="editaDadoProcesso(principal)">Novo</button>
-    </div> 
-  </div>
+
 
 
 
