--- a/gersis-angular/src/app/relacionamento-entidade-edit/relacionamento-entidade-edit.component.html
+++ b/gersis-angular/src/app/relacionamento-entidade-edit/relacionamento-entidade-edit.component.html
@@ -6,11 +6,11 @@
 
 
     <mat-form-field class="example-half-width">
-      <input matInput maxlength="100" #nome1 [(ngModel)]="item.nome1" name="nome1" placeholder="Nome 1" autocomplete="off" />
+      <input matInput maxlength="100" #nome1 [(ngModel)]="item.nome1" name="nome1" placeholder="Nome 1 (opcional)" autocomplete="off" />
     </mat-form-field>
 
     <mat-form-field class="example-half-width">
-      <input matInput maxlength="100" #nomeN [(ngModel)]="item.nomeN" name="nomeN" placeholder="Nome N" autocomplete="off" />
+      <input matInput maxlength="100" #nomeN [(ngModel)]="item.nomeN" name="nomeN" placeholder="Nome N (opcional)" autocomplete="off" />
     </mat-form-field>
 
 
