--- a/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
+++ b/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
@@ -19,6 +19,7 @@
         <mat-option value="string">string</mat-option>
         <mat-option value="date">date</mat-option>
         <mat-option value="object">object</mat-option>
+        <mat-option value="array">array</mat-option>
       </mat-select>
     </mat-form-field>
 
