--- a/gersis-angular/src/app/entidade-detalhe/entidade-detalhe.component.html
+++ b/gersis-angular/src/app/entidade-detalhe/entidade-detalhe.component.html
@@ -54,7 +54,7 @@
       </div>
       <div *ngFor="let parametro of item.parametroMetodoServers">
         <div class="dgc-card-detalhe" >
-          <span>{{parametro.nome}}&nbsp;&nbsp;</span><span>:{{parametro.tipo}} ({{parametro.posicao}})</span>
+          <span> -  {{parametro.nome}}&nbsp;&nbsp;</span><span>:{{parametro.tipo}} ({{parametro.posicao}})</span>
           <div class="dgc-direita">
             <button class="btn-primary btn-sm btn" (click)="editaParametro(parametro)">Altera Parâmetro</button>
           </div>
