--- a/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
+++ b/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
@@ -11,6 +11,9 @@
   <div *ngIf="principal">
     <span>Cron: {{principal.crontab}}</span>
   </div>
+  <div *ngIf="principal">
+    <span>Jar: {{principal.jar}}</span>
+  </div>
 
   <div class="dgc-painel-principal">
 
