--- a/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
+++ b/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
@@ -5,7 +5,7 @@
   <mat-dialog-content>
 
     <mat-form-field class="example-full-width">
-      <input matInput maxlength="100" #nome [(ngModel)]="item.nome" name="nome" placeholder="Nome" autocomplete="off" />
+      <input matInput maxlength="100" #nome [(ngModel)]="item.nome" name="nome" placeholder="Nome ( não usar id )" autocomplete="off" />
     </mat-form-field>
     
     <mat-form-field class="example-full-width">
