--- a/gersis-angular/src/app/sidebar/sidebar.component.html
+++ b/gersis-angular/src/app/sidebar/sidebar.component.html
@@ -54,5 +54,13 @@
     </li>
   </ul>
 
+  <ul class="nav responsive-nav" *ngIf="sistemaId">
+    <li width="100%">
+      <a routerLink="/processoPython/{{sistemaId}}">
+        <i class="fa fa-search"></i>
+        <p>Processos Python</p>
+      </a>
+    </li>
+  </ul>
 
 </div>
