--- a/gersis-angular/src/app/sidebar/sidebar.component.html
+++ b/gersis-angular/src/app/sidebar/sidebar.component.html
@@ -63,4 +63,14 @@
     </li>
   </ul>
 
+  <ul class="nav responsive-nav" *ngIf="sistemaId">
+    <li width="100%">
+      <a routerLink="/atividadeSistema/{{sistemaId}}">
+        <i class="fa fa-search"></i>
+        <p>Atividades</p>
+      </a>
+    </li>
+  </ul>
+
+
 </div>
