--- a/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
+++ b/gersis-angular/src/app/parametro-metodo-server-edit/parametro-metodo-server-edit.component.html
@@ -18,7 +18,7 @@
         <mat-option value="number-double">number-double</mat-option>
         <mat-option value="string">string</mat-option>
         <mat-option value="date">date</mat-option>
-        <mat-option value="object">object</mat-option>
+        <mat-option value="object">object ({{origem.nome}})</mat-option>
         <mat-option value="array">array</mat-option>
       </mat-select>
     </mat-form-field>
