--- a/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
+++ b/gersis-angular/src/app/processo-java-detalhe/processo-java-detalhe.component.html
@@ -70,13 +70,15 @@
         <span *ngIf="item.dentroLoop==1">*</span>
         <span *ngIf="(item.metodoServer!=null)">
           <span class="dgc-link" routerLink="/entidadeDetalhe/{{item.metodoServer.entidadeId}}" title="{{item.metodoServer.descricao}}" >
-            {{item.ordenacao}}<span *ngIf="item.finalizacao==1">F</span>. {{item.nomeClasse}}  
+            {{item.ordenacao}}<span *ngIf="item.finalizacao==1">F</span>. {{item.nomeClasse}} 
+            
           </span>
         </span>
         <span *ngIf="(item.metodoServer==null)">
           <span >{{item.ordenacao}}<span *ngIf="item.finalizacao==1">F</span>. {{item.nomeClasse}}  </span>
         </span>
         <span *ngIf="item.dentroLoop==1"> (loop)</span>
+        <span *ngIf="item.tipoPasso=='GOOGLE_ADS_QUERY'"> [Ads Query] </span> 
         <div class="dgc-direita">
           <button class="btn-primary btn-sm btn" (click)="subirItem(item)">Subir</button>
           <button class="btn-primary btn-sm btn" (click)="novaEntrada(item)">Entrada</button>
